add homepage to package json

--- a/qrdisplay/package.json
+++ b/qrdisplay/package.json
@@ -1,5 +1,6 @@
 {
   "name": "qrdisplay",
+  "homepage": "https://iotlab.cantara.no/javazone/qrdisplay",  
   "version": "0.1.0",
   "private": true,
   "dependencies": {
