--- a/qrdisplay/package.json
+++ b/qrdisplay/package.json
@@ -1,6 +1,6 @@
 {
   "name": "qrdisplay",
-  "homepage": "https://iotlab.cantara.no/javazone/qrdisplay",  
+  "homepage": "/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
